--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<ion-content class="background">
+  <div class="content">
+    <div class="button-action">
+      <ion-button fill="clear" color="dark" size="small">
+        <b><p class="signin-text">Sign In</p></b>
+      </ion-button>
+      <ion-button fill="clear" color="dark" size="small" routerLink="/register" routerDirection="root">
+        <b><p class="signup-text">Sign Up</p></b>
+      </ion-button>
+      <ion-button fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">
+        <b><p class="mainpage-text">Pogledaj polaske</p></b>
+      </ion-button>
+    </div>
+    
+ 
+    <form #f="ngForm" (ngSubmit)="signIn(f)">
+      <div class="ion-padding">
+        <ion-input type="text" placeholder="Email" ngModel name="email" required minlength="6" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
+        <ion-input type="password" placeholder="Password" ngModel name="password" required minlength="3" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
+      </div>
+      <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">Sign In</ion-button>
+    </form>
   </div>
 </ion-content>
