--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,74 @@
-#container {
+ion-content.background{
+  --background: url('../../assets/picture/train4.jpg') no-repeat left 50%/cover;
+}
+.content{
+  position: fixed;
+  margin-top: 250px;
+  margin-left: 40px;
+}
+.buttons-action{
+  margin-left: 5px;
+}
+
+.signup-text{
+  font-size: x-small;
+  color:#a8a8a8;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  font-family: 'Nunito',sans-serif;
+  text-transform: none;
 }
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.mainpage-text{
+  font-size: x-small;
+  color:#a8a8a8;
+  text-align: center;
+  font-family: 'Nunito',sans-serif;
+  text-transform: none;
 }
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.signin-text{
+  font-size: small;
+  font-family: 'Nunito',sans-serif;
+  text-transform: none;
 }
-
-#container a {
-  text-decoration: none;
+ion-input{
+  background-color: #ededed;
+  border-radius:  5px;
+  font-size: small;
+}
+.actionbutton{
+  background-color:turquoise;
+  color: black;
+  border-radius:  5px;
+  margin-left: 15px;
+  margin-right: 13px;
+  font-size: small;
+  font-family: 'Nunito',sans-serif;
+}
+ion-checkbox{
+  background-color: #a04eff;
+  border-radius:  5px;
+  --height: 10px;
+  --width: 10px;
+  --checkmark-color: white;
+  --background-checked:#a04eff;
+  --border-color:#a04eff;
+}
+.line{
+  border-bottom: 1px solid grey;
+  margin-bottom: 16px;
+}
+.fbbutton{
+  background-color: #3b5998;
+  border-radius: 6px;
+  color: cornsilk;
+  margin-bottom: 12px;
+  font-family: 'Nunito',sans-serif;
+  text-transform: none;
+}
+.googlebutton{
+  background-color: #ae4335;
+  border-radius: 6px;
+  color: cornsilk;
+  margin-bottom: 12px;
+  font-family: 'Nunito',sans-serif;
+  text-transform: none;
 }
