--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -9,7 +9,7 @@
       <ion-item fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">Pretrazi polaske</ion-item>
       <ion-item fill="clear" color="dark" size="small" routerLink="/moje-rezervacije" routerDirection="root">Moje rezervacije</ion-item>
       <ion-item fill="clear" color="dark" size="small" routerLink="/moj-nalog" routerDirection="root">Moj nalog</ion-item>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/home" routerDirection="root">Odjavi se</ion-item>
+      <ion-item (click)="izlogujSe()" fill="clear" color="dark" size="small">Odjavi se</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
