--- a/src/app/moje-rezervacije/moje-rezervacije.page.html
+++ b/src/app/moje-rezervacije/moje-rezervacije.page.html
@@ -9,12 +9,16 @@
       <ion-item fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">Pretrazi polaske</ion-item>
       <ion-item fill="clear" color="dark" size="small" routerLink="/moje-rezervacije" routerDirection="root">Moje rezervacije</ion-item>
       <ion-item fill="clear" color="dark" size="small" routerLink="/moj-nalog" routerDirection="root">Moj nalog</ion-item>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/home" routerDirection="root">Odjavi se</ion-item>
+      <ion-item (click)="izlogujSe()" fill="clear" color="dark" size="small">Odjavi se</ion-item>
     </ion-list>
   </ion-content>
 </ion-menu>
 <ion-router-outlet id="main"></ion-router-outlet>
 
 <ion-content>
-
-</ion-content>
+  <ion-list *ngFor="let rezervacija of rezervacije">
+    <ion-item>
+      <h5>{{rezervacija}}</h5>
+    </ion-item>
+  </ion-list>
+  </ion-content>
