--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
         <b><p class="signup-text">Sign Up</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">
-        <b><p class="mainpage-text">Pogledaj polaske</p></b>
+        <b><p class="mainpage-text">Pogledaj red voznje</p></b>
       </ion-button>
     </div>
     
