--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,23 +2,29 @@
   <div class="content">
     <div class="button-action">
       <ion-button fill="clear" color="dark" size="small">
-        <b><p class="signin-text">Sign In</p></b>
+        <ion-icon name="log-in"></ion-icon>
+        <b><p class="signin-text">
+          Sign In</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small" routerLink="/register" routerDirection="root">
-        <b><p class="signup-text">Sign Up</p></b>
+        <ion-icon name="person-add"></ion-icon>
+        <b><p class="signup-text">
+          Sign Up</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">
-        <b><p class="mainpage-text">Pogledaj red voznje</p></b>
+        <ion-icon name="calendar"></ion-icon>
+        <b><p class="mainpage-text">Red voznje</p></b>
       </ion-button>
     </div>
-    
- 
+
     <form #f="ngForm" (ngSubmit)="signIn(f)">
       <div class="ion-padding">
-        <ion-input type="text" placeholder="Email" ngModel name="email" required minlength="6" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
-        <ion-input type="password" placeholder="Password" ngModel name="password" required minlength="3" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
+        <ion-input type="text" placeholder="Email" ngModel name="email" required minlength="6" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
+        <ion-input type="password" placeholder="Password" ngModel name="password" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;" required></ion-input>
       </div>
-      <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">Sign In</ion-button>
+      <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
+        <ion-icon name="log-in"></ion-icon>
+        Sign In</ion-button>
     </form>
   </div>
 </ion-content>
