--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -2,9 +2,11 @@
   <div class="content">
     <div class="button-action">
       <ion-button fill="clear" color="dark" size="small" routerLink="/home" routerDirection="root">
+        <ion-icon name="log-in"></ion-icon>
         <b><p class="signin-text">Sign In</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small">
+        <ion-icon name="person-add"></ion-icon>
         <b><p class="signup-text">Sign Up</p></b>
       </ion-button>
     </div>
@@ -18,8 +20,11 @@
         <ion-input type="text" placeholder="Firstname" ngModel name="firstname" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
         <ion-input type="text" placeholder="Lastname" ngModel name="lastname" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input><br>
         <ion-input type="password" placeholder="Password" ngModel name="password" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
+        <ion-input type="password" placeholder="Repeat password" ngModel name="repassword" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
       </div>
-      <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">Sign Up</ion-button>
+      <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
+        <ion-icon name="person-add"></ion-icon>
+        Sign Up</ion-button>
     </form>
   </div>
   
