--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,30 +1,40 @@
+<ion-header>
+  <ion-toolbar>
+      <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    <ion-title>
+      Железнице Србије
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content class="background">
   <div class="content">
     <div class="button-action">
       <ion-button fill="clear" color="dark" size="small">
         <ion-icon name="log-in"></ion-icon>
         <b><p class="signin-text">
-          Sign In</p></b>
+         Пријави се</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small" routerLink="/register" routerDirection="root">
         <ion-icon name="person-add"></ion-icon>
         <b><p class="signup-text">
-          Sign Up</p></b>
+          Направи налог</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">
         <ion-icon name="calendar"></ion-icon>
-        <b><p class="mainpage-text">Red voznje</p></b>
+        <b><p class="mainpage-text">Ред вожње</p></b>
       </ion-button>
     </div>
 
     <form #f="ngForm" (ngSubmit)="signIn(f)">
       <div class="ion-padding">
-        <ion-input type="text" placeholder="Email" ngModel name="email" required minlength="6" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
-        <ion-input type="password" placeholder="Password" ngModel name="password" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;" required></ion-input>
+        <ion-input type="text" placeholder="Емаил адреса" ngModel name="email" required minlength="6" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
+        <ion-input type="password" placeholder="Лозинка" ngModel name="password" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;" required></ion-input>
       </div>
       <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
         <ion-icon name="log-in"></ion-icon>
-        Sign In</ion-button>
+        Пријави се</ion-button>
     </form>
   </div>
 </ion-content>
