--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,33 +1,15 @@
-<ion-menu side="start" menuId="first" contentId="main">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>
-        <ion-icon name="menu"></ion-icon>Meni
-            </ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">
-        <ion-icon name="search-circle"></ion-icon>        
-        Pretrazi polaske
-      </ion-item>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/moje-rezervacije" routerDirection="root">
-        <ion-icon name="bag-check"></ion-icon>
-        Moje rezervacije
-      </ion-item>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/moj-nalog" routerDirection="root">
-        <ion-icon name="person"></ion-icon>
-                Moj nalog
-      </ion-item>
-      <ion-item (click)="izlogujSe()" fill="clear" color="dark" size="small">
-        <ion-icon name="log-out"></ion-icon>
-        Odjavi se
-      </ion-item>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-<ion-router-outlet id="main"></ion-router-outlet>
+<ion-header>
+  <ion-toolbar>
+      <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    <ion-title>
+      Ред вожње
+    
+    </ion-title>
+    <ion-button slot="end" (click)="izlogujSe()" >Одјави се</ion-button>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
 <body>
   
@@ -35,8 +17,8 @@
 <ion-list>
     <ion-item class="pocetnaStanica">
       <ion-label class="stanicaNazivLbl">
-        <ion-icon name="flag"></ion-icon>     Pocetna stanica</ion-label>
-      <ion-select class="stanicaSelect" [(ngModel)]="stanice1.nazivStanice"  interface="popover" placeholder="Izaberi stanicu">
+        <ion-icon name="flag"></ion-icon>  Од</ion-label>
+      <ion-select class="stanicaSelect" [(ngModel)]="stanice1.nazivStanice"  interface="popover" placeholder="Изабери станицу">
         <ion-select-option *ngFor="let stanica1 of stanice1" [value]="stanica1">{{stanica1.nazivStanice}}</ion-select-option>
       </ion-select>
     </ion-item>
@@ -47,8 +29,8 @@
 <ion-list>
   <ion-item class="krajnjaStanica">
     <ion-label class="stanicaNazivLbl">
-      <ion-icon name="flag"></ion-icon>                  Krajnja stanica</ion-label> 
-    <ion-select class="stanicaSelect" [(ngModel)]="stanice2.nazivStanice"  interface="popover" placeholder="Izaberi stanicu">
+      <ion-icon name="flag"></ion-icon>                  До</ion-label> 
+    <ion-select class="stanicaSelect" [(ngModel)]="stanice2.nazivStanice"  interface="popover" placeholder="Изабери станицу">
         <ion-select-option  *ngFor="let stanica2 of stanice2" [value]="stanica2">{{stanica2.nazivStanice}}</ion-select-option>
      </ion-select>
   </ion-item>
@@ -56,32 +38,30 @@
 <ion-item>
   <ion-label>
     <ion-icon name="calendar"></ion-icon>
-    Datum</ion-label>
-<ion-datetime  class="datum" [(ngModel)]="selectedDate" (ionChange)="convert()" [min]="today" placeholder="Datum"> </ion-datetime>
+    Датум</ion-label>
+<ion-datetime  class="datum" [(ngModel)]="selectedDate" (ionChange)="convert()" [min]="today" placeholder="Изабери датум"> </ion-datetime>
 </ion-item>
 
 <div class="actionButtonDiv">
 <ion-button (click)="pretrazi(stanice1.nazivStanice,stanice2.nazivStanice)" type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
   <ion-icon name="search"></ion-icon>
-  Pretrazi polaske</ion-button>
+  Претражи поласке</ion-button>
 </div>
+<ion-content>
 <ion-grid>
- 
- 
   <ion-card class="card">
     <ion-row>
       <ion-col class="rb">
-        <ion-icon name="ellipsis-vertical-circle-outline"></ion-icon>
-            R.B.</ion-col>
+            #</ion-col>
       <ion-col class="linija">
         <ion-icon name="train"></ion-icon>
-        Linija</ion-col>
+        Линија</ion-col>
       <ion-col class="datumPolazak">
         <ion-icon name="time"></ion-icon>
-        Polazak</ion-col>
+        Полазак</ion-col>
       <ion-col class="datumDolazak">
         <ion-icon name="time"></ion-icon>
-        Dolazak</ion-col>
+        Долазак</ion-col>
     </ion-row>
   </ion-card>
 <ion-card *ngFor="let polazak of polasci; let i=index">
@@ -107,12 +87,10 @@
   </ion-button>
 </ion-card>
 </ion-grid>
+</ion-content>
 </body>
+
 </ion-content>
 
-<ion-footer class="ion-no-border">
-  <ion-toolbar>
-    <ion-title>Footer - No Border</ion-title>
-  </ion-toolbar>
-</ion-footer>
+
 
