--- a/src/app/moj-nalog/moj-nalog.page.html
+++ b/src/app/moj-nalog/moj-nalog.page.html
@@ -1,20 +1,26 @@
-<ion-menu side="start" menuId="first" contentId="main">
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-title>Meni</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content>
-    <ion-list>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">Pretrazi polaske</ion-item>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/moje-rezervacije" routerDirection="root">Moje rezervacije</ion-item>
-      <ion-item fill="clear" color="dark" size="small" routerLink="/moj-nalog" routerDirection="root">Moj nalog</ion-item>
-      <ion-item (click)="izlogujSe()" fill="clear" color="dark" size="small">Odjavi se</ion-item>
-    </ion-list>
+<ion-header>
+  <ion-toolbar>
+      <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    <ion-title>
+      Налог
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<form #a="ngForm" (ngSubmit)="izmeniNalog(a)"></form>
+  <ion-content >
+    <div class="ion-padding">
+     <ion-input type="text" placeholder="Емаил адреса"  ngModel name="email" required></ion-input> <br>
+    <ion-input type="text" placeholder="Корисничко име" ngModel name="username" required  ></ion-input><br>
+     <ion-input type="text" placeholder="Име" ngModel name="firstname" required></ion-input><br>
+      <ion-input type="text" placeholder="Презиме" ngModel name="lastname" required ></ion-input><br>
+     <ion-input type="password" placeholder="Лозинка" ngModel name="password" required  ></ion-input><br>
+      <ion-input type="password" placeholder="Понови лозинку" ngModel name="repassword" required ></ion-input>
+    </div>
+    <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
+      <ion-icon name="person-add"></ion-icon>
+     Промени податке</ion-button>
   </ion-content>
-</ion-menu>
-<ion-router-outlet id="main"></ion-router-outlet>
 
-<ion-content>
   
-</ion-content>
