--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,13 +1,23 @@
+<ion-header>
+  <ion-toolbar>
+      <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+    <ion-title>
+      Железнице Србије
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content class="background">
   <div class="content">
     <div class="button-action">
       <ion-button fill="clear" color="dark" size="small" routerLink="/home" routerDirection="root">
         <ion-icon name="log-in"></ion-icon>
-        <b><p class="signin-text">Sign In</p></b>
+        <b><p class="signin-text">Пријави се</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small">
         <ion-icon name="person-add"></ion-icon>
-        <b><p class="signup-text">Sign Up</p></b>
+        <b><p class="signup-text">Направи налог</p></b>
       </ion-button>
     </div>
     
@@ -15,16 +25,16 @@
  
     <form #a="ngForm" (ngSubmit)="register(a)">
       <div class="ion-padding">
-        <ion-input type="text" placeholder="Email" ngModel name="email" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
-        <ion-input type="text" placeholder="Username" ngModel name="username" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input><br>
-        <ion-input type="text" placeholder="Firstname" ngModel name="firstname" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
-        <ion-input type="text" placeholder="Lastname" ngModel name="lastname" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input><br>
-        <ion-input type="password" placeholder="Password" ngModel name="password" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
-        <ion-input type="password" placeholder="Repeat password" ngModel name="repassword" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
+        <ion-input type="text" placeholder="Емаил адреса" ngModel name="email" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
+        <ion-input type="text" placeholder="Корисничко име" ngModel name="username" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input><br>
+        <ion-input type="text" placeholder="Име" ngModel name="firstname" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
+        <ion-input type="text" placeholder="Презиме" ngModel name="lastname" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input><br>
+        <ion-input type="password" placeholder="Лозинка" ngModel name="password" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input><br>
+        <ion-input type="password" placeholder="Понови лозинку" ngModel name="repassword" required  style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input>
       </div>
       <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
         <ion-icon name="person-add"></ion-icon>
-        Sign Up</ion-button>
+        Направи налог</ion-button>
     </form>
   </div>
   
