--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,44 @@
 <ion-app>
   <ion-menu side="start" menuId="first" contentId="content1">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Мени</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list *ngFor="let pages of navigate">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title style="color: dodgerblue">
+          <ion-icon name="grid"></ion-icon>
+          Мени</ion-title
+        >
+        <ion-button slot="end" 
+        fill="clear"
+        expand="block"
+        routerDirection="forward"
+        [hidden]="ishidden"
+        (click)="izlogujSe()"
+      >
+        <ion-icon name="log-out"></ion-icon>
+        Одјави се</ion-button
+      >
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-list *ngFor="let pages of navigate">
         <ion-menu-toggle auto-hide="true">
-          <ion-item [routerLink]="pages.url" routerDirection="forward">
-              <ion-icon [name]="pages.icon" slot="start"></ion-icon>
-                 {{pages.title}} 
-          </ion-item>
+          <ion-button
+            style="float: left"
+            fill="clear"
+            expand="block"
+            routerDirection="forward"
+            (click)="openPage(pages.url)"
+          >
+            <ion-icon [name]="pages.icon" slot="start"></ion-icon>
+            {{ pages.title }}
+          </ion-button>
         </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-<ion-router-outlet id="content1"></ion-router-outlet>
+  
+      </ion-list>
+     
+     
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="content1"></ion-router-outlet>
 </ion-app>
 
