--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="background">
-  <div class="content">
+  <div class="ion-padding">
     <div class="button-action">
       <ion-button fill="clear" color="dark" size="small">
         <ion-icon name="log-in"></ion-icon>
@@ -21,20 +21,30 @@
         <b><p class="signup-text">
           Направи налог</p></b>
       </ion-button>
-      <ion-button fill="clear" color="dark" size="small" routerLink="/main" routerDirection="root">
-        <ion-icon name="calendar"></ion-icon>
-        <b><p class="mainpage-text">Ред вожње</p></b>
-      </ion-button>
     </div>
+  
 
     <form #f="ngForm" (ngSubmit)="signIn(f)">
       <div class="ion-padding">
-        <ion-input type="text" placeholder="Емаил адреса" ngModel name="email" required minlength="6" required style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;"></ion-input> <br>
-        <ion-input type="password" placeholder="Лозинка" ngModel name="password" style="padding-left:10px !important; color:darkblue; font-family: 'Nunito',san-serif;" required></ion-input>
+        <ion-item>
+          <ion-label position="floating">Емаил адреса</ion-label>
+          <ion-input type="text" ngModel name="email" required minlength="6" required></ion-input> 
+        </ion-item>
+        <br>
+        <ion-item>
+          <ion-label position="floating">Лозинка</ion-label>
+          <ion-input type="password" ngModel name="password" required></ion-input>
+        </ion-item>
+       
       </div>
-      <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
-        <ion-icon name="log-in"></ion-icon>
-        Пријави се</ion-button>
+        <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
+          <ion-icon name="log-in"></ion-icon>
+          Пријави се</ion-button>
     </form>
   </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title style="float: right;"> © Железнице Србије</ion-title>
+  </ion-toolbar>
+</ion-footer>
