mogucnost promene korisnickog imena i lozinke

--- a/src/app/moje-rezervacije/moje-rezervacije.page.html
+++ b/src/app/moje-rezervacije/moje-rezervacije.page.html
@@ -51,3 +51,8 @@
   </ion-card>
   </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title style="float: right;"> © Железнице Србије</ion-title>
+  </ion-toolbar>
+</ion-footer>
