--- a/src/app/moj-nalog/moj-nalog.page.html
+++ b/src/app/moj-nalog/moj-nalog.page.html
@@ -29,14 +29,14 @@
       <br>
       <ion-item>
         <ion-label position="floating" >{{klijent?.korisnickoIme}}</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" ngModel name="korisnickoIme"></ion-input>
       </ion-item>
     </div>   
     <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
       <ion-icon name="person"></ion-icon>
-     Промени податке</ion-button>
+     Промени корисничко име</ion-button>
 </form>
-<form #a="ngForm" (ngSubmit)="izmeniSifru(a)">
+<form #f="ngForm" (ngSubmit)="izmeniSifru(f)">
   <div class="ion-padding">
   <ion-item>
     <ion-label position="floating">Нова лозинка</ion-label>
@@ -53,4 +53,9 @@
  Промени лозинку</ion-button>
 </form>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-title style="float: right;"> © Железнице Србије</ion-title>
+  </ion-toolbar>
+</ion-footer>
   
